			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05f: *********************************

IMP: (2/12/07, GVG) Adding VIA9 and M10 in 90nm tech. Rules added in TSMC90.xml and ST90.xml.

BUG: (2/12/07, SMR) Verilog netlists MOS transistors incorrectly
     (writes 4 parameters instead of 3).
FIX: In Verilog.writeCellTopology(), prevent both gates of the
     transitor from being written.

IMP/MAN: (2/12/07, SMR) Added the command "Edit / Text / Edit Text Cell Externally..."
     to edit the current textual cell in an external editor.  The editor is chosen
     in the Display / Text Preferences.

BUG: (2/8/07, SMR) When switching layers with a digit key, new contact
     is not highlighted (Bug #1274).
FIX: In InteractiveRouter.MakeVerticalRouteJob constructor, pass the "verbose"
     argument to the super-class constructor.

IMP: (2/7/07, SMR) Schematic frames now print properly.

BUG: (2/7/07, SMR) Cannot delete old versions of schematics because the syste
     thinks their icons are in use.
FIX: In Cell.isInUse(), consider icon usage only for most recent version.

IMP: (2/7/07, SMR) Text windows now print.

************************* Version 8.05e: *********************************

IMP: (2/6/07, SMR) Exporting from an arrayed node now creates an arrayed export.

BUG: (1/31/07, DN) Get rid of those "has connections on port 'generic:Port[].center" messages (Bug #829).
FIX: Remove messages about connections on Artwork.tech.pinNode from DRC.checkNetworks .

IMP: (2/5/07, RK) Add simple layout generation example for Ivan.

BUG: (2/5/07, SMR) Implant coverage generation leaves notch errors (Bug #1272).
FIX: In LayerCoverageTool.LayerCoverageData.doIt(), merge close implants.

BUG: (2/5/07, GVG) Schematic DRC should not complain about artwork elememts (Bug#1273)
FIX: Artwork arcs are not checked in Schematic.schematicDoCheck()
