@@ -4,6 +4,11 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.05f: *********************************
 
+BUG: (2/12/07, SMR) Clicking and dragging a cell from the explorer to the
+     edit window fails if the cell is not already selected (Bug #1276).
+FIX: This is a known bug in Java 1.5.  The workaround is to override the
+     method setUI() in ExplorerTree.java.
+
 IMP: (2/12/07, GVG) Adding VIA9 and M10 in 90nm tech. Rules added in TSMC90.xml and ST90.xml.
 
 BUG: (2/12/07, SMR) Verilog netlists MOS transistors incorrectly
